<resources>
    <string name="app_name">AbacommDesafio</string>

    <string name="activity_login_esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="activity_login_nao_tem_cadastro">Ainda não tem cadastro?</string>
    <string name="activity_login_registrar">Registre-se</string>
    <string name="activity_login_button">Entrar</string>

    <string name="activity_login_usuario_hint">Login</string>
    <string name="activity_login_password_hint">Senha</string>
    
    <string name="pergunta1">Com que frequência você viaja para %s?</string>
    <string name="resposta1_1">Primeira vez</string>
    <string name="resposta1_2">Até 5 vezes no ano</string>
    <string name="resposta1_3">Muitas vezes</string>

    <string name="pergunta2">Com que finalizade você viaja para %s?</string>
    <string name="resposta2_1">Família</string>
    <string name="resposta2_2">Trabalho</string>
    <string name="resposta2_3">Lazer</string>

    <string name="pergunta3">Você voltaria à %s?</string>
    <string name="resposta3_1">Não</string>
    <string name="resposta3_2">Talvez</string>
    <string name="resposta3_3">Sim</string>

    <string name="pergunta4">Você recomendaria a cidade %s?</string>
    <string name="resposta4_1">Não</string>
    <string name="resposta4_2">Talvez</string>
    <string name="resposta4_3">Sim</string>
</resources>
